[package]
name = "unvoid"
version = "0.1.0"
edition = "2021"
authors = ["Norbert Melzer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "unvoid"
src = "bin/unvoid.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
tokio = { version = "1.37.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
