[package]
name = "unvoid"
version = "0.1.0"
edition = "2021"
authors = ["Norbert Melzer"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "unvoid"

[dependencies]
clap = { version = "4.5.4", features = ["derive", "cargo"] }
color-eyre = "0.6.3"
eyre = "0.6.12"
semver = { version = "1.0.22", features = ["serde"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
serde_yaml = "0.9.34"
tokio = { version = "1.37.0", features = ["full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"

[dev-dependencies]
lazy_static = "1.4.0"
pretty_assertions = "1.4.0"
rstest = "0.23.0"
